Add Quill Lessons link to footer

--- a/app/views/pages/shared/_footer.html.erb
+++ b/app/views/pages/shared/_footer.html.erb
@@ -19,6 +19,9 @@
       <li>
         <a href="/tools/grammar">Quill Grammar</a>
       </li>
+      <li>
+        <a href="/tools/lessons">Quill Lessons</a>
+      </li>
     </ul>
     <ul>
       <li>
