removes text decoration from navbar and commented out code

--- a/app/assets/stylesheets/shared/tabs.scss
+++ b/app/assets/stylesheets/shared/tabs.scss
@@ -5,6 +5,7 @@
   width: 100%;
     li {
         a {
+            text-decoration: none;
             border-top: 3px solid transparent;
             border-bottom: 1px solid #cecece;
             padding-left: 34px;
