moves checkbox click callback up so entire cell is trigger, improved css cursor

--- a/app/assets/stylesheets/pages/progress_reports/diagnostic_reports.scss
+++ b/app/assets/stylesheets/pages/progress_reports/diagnostic_reports.scss
@@ -418,7 +418,9 @@ $lightgray: #cecece;
           -ms-flex-align: center;
               align-items: center;
       border-bottom: none;
-
+      &:not(.previously-assigned) {
+        cursor: pointer;  
+      }
       &.recommended {
         background-color: #eafcff;
       }
