--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -18,6 +18,7 @@
 @import 'classroom_lessons/_assigned_section.scss';
 @import 'classroom_lessons/_flagged_student_completed.scss';
 @import 'classroom_lessons/_congratulations_modal.scss';
+@import 'classroom_lessons/_timeout_modal.scss';
 
 .teach-lesson-container {
   display: flex;
