Include user flag in cms edit form, remove old logic from cms users update

--- a/app/views/cms/users/_form.html.erb
+++ b/app/views/cms/users/_form.html.erb
@@ -17,6 +17,10 @@
       <%= f.select :role, [['student', 'student'], ['teacher', 'teacher'], ['admin', 'admin'], ['staff', 'staff']] %>
     </div>
     <div class='cms-form-row'>
+      <%= f.label :flag %>
+      <%= f.select :flag, [['beta', 'beta'], ['alpha', 'alpha']], autocomplete: 'off', include_blank: true %>
+    </div>
+    <div class='cms-form-row'>
       <%= f.label :classcode %>
       <%= f.text_field :classcode %>
     </div>
