--- a/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
+++ b/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
@@ -8,7 +8,7 @@
   margin-top: 25px;
   display: flex;
   justify-content: space-between;
-  max-width: 415px;
+  max-width: 460px;
   width: 100%;
   margin: auto;
   @media (max-width: 500px) {
@@ -18,18 +18,26 @@
   .clever-login,
   .clever-sign-up,
   .google-sign-up {
-    width: 198.1px;
-    height: 40px;
+    width: 220px;
+    height: 45px;
     border-radius: 3px;
     background-color: #ffffff;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     box-shadow: 0 1px 1px 0 #c0c0c0;
-    font-family: Roboto, adelle-sans, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    color: #757575;
     margin: 0 auto 15px;
+    padding-left: 20px;
+    img {
+      width: 25px;
+      height: 25px;
+    }
+    span {
+      font-family: Roboto, adelle-sans, Helvetica, Arial, sans-serif;
+      font-size: 16px;
+      font-weight: 600;
+      color: #3b3b3b;
+    }
   }
   .clever-sign-up,
   .google-sign-up {
@@ -39,7 +47,12 @@
   .google-login {
     padding: 0 30 1 10;
   }
+}
 
+.sign-up-form {
+  label {
+    font-size: 14px;
+  }
 }
 
 .google-sign-in {
@@ -59,10 +72,15 @@
     width: 90%;
     margin: auto;
   }
-
+  .password-and-signup {
+    display: flex;
+    max-width: 460px;
+    width: 100%;
+    justify-content: space-between;
+  }
   .login-form {
     label {
-      font-weight: 600;
+      font-weight: 500;
       margin-bottom: 10px;
     }
     .login-button {
@@ -275,8 +293,10 @@
         margin-top: 15px;
       }
       h3 {
-        margin-bottom: 18px;
-        margin-top: 30px;
+        font-size: 24px;
+        font-weight: 600;
+        margin-bottom: 35px;
+        margin-top: 50px;
       }
       span a {
         margin: 7px;
