--- a/app/assets/stylesheets/pages/signin.scss
+++ b/app/assets/stylesheets/pages/signin.scss
@@ -1,5 +1,29 @@
 // SIGN IN
 
+.password-hint {
+  background-color: #fcf2e1;
+  max-width: 460px;
+  width: 100%;
+  padding: 14px 22px;
+  border: solid 1px rgba(245, 186, 91, 0.41);
+  border-radius: 1px;
+  margin-top: 55px;
+  h4 {
+    font-weight: 600;
+    font-size: 16px;
+    margin-top: 0;
+    margin-bottom: 11px;
+  }
+  p {
+    text-align: left;
+  }
+  code {
+    padding: 8px 24px;
+    color: #3b3b3b;
+    font-size: 14px;
+  }
+}
+
 %login_form {
   .control-group {
     margin-bottom: 10px;
