--- a/app/styles/components/classroom_lessons/_timeout_modal.scss
+++ b/app/styles/components/classroom_lessons/_timeout_modal.scss
@@ -23,6 +23,7 @@
     text-align: center;
     z-index: 100;
     width: 550px;
+    box-shadow: 5px 5px 5px #888888;
     .exit {
       right: 12px;
       top: 12px;
