Plead with Google Chrome to please not autofill this

--- a/app/views/cms/users/_form.html.erb
+++ b/app/views/cms/users/_form.html.erb
@@ -26,11 +26,11 @@
     </div>
     <div class='cms-form-row'>
       <%= f.label :password %>
-      <%= f.password_field :password, autocomplete: 'off' %>
+      <%= f.password_field :password, autocomplete: 'new-password' %>
     </div>
     <div class='cms-form-row'>
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: 'off' %>
+      <%= f.password_field :password_confirmation, autocomplete: 'new-password' %>
     </div>
     <div class='cms-submit-row'>
       <%= f.submit 'Save', class: 'button-green' %>
