--- a/app/views/cms/users/edit_subscription.html.erb
+++ b/app/views/cms/users/edit_subscription.html.erb
@@ -8,12 +8,12 @@
       <%= form_tag update_subscription_cms_user_path(params[:id]) do %>
         <div class='cms-form-row'>
           <%= label_tag 'premium_status', 'Premium Status' %>
-          <%= select_tag 'premium_status', options_for_select(@user_premium_types, @account_type), include_blank: true %>
+          <%= select_tag 'premium_status', options_for_select(@user_premium_types, @account_type), include_blank: true, autocomplete: 'off' %>
         </div>
 
         <div class='cms-form-row'>
           <%= label_tag 'expiration_date', 'Expiration Date' %>
-          <%= select_date @expiration_date, prefix: :expiration_date %>
+          <%= select_date @expiration_date, prefix: :expiration_date, autocomplete: 'off' %>
         </div>
 
         <div class='cms-submit-row'>
