update background color on all modals

--- a/app/styles/components/classroom_lessons/_preview_modal.scss
+++ b/app/styles/components/classroom_lessons/_preview_modal.scss
@@ -6,7 +6,7 @@
   left: 0;
   z-index: 100;
   opacity: 0.89;
-	background-color: #969696;
+	background-color: #3f3f3f;
 }
 .preview-modal {
   width: 551px;
