--- a/app/styles/components/classroom_lessons/_projector_modal.scss
+++ b/app/styles/components/classroom_lessons/_projector_modal.scss
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     z-index: 99;
-    background-color: #969696;
+    background-color: #3f3f3f;
     opacity: 0.9;
   }
   .projector-modal {
