--- a/app/styles/components/classroom_lessons/_timeout_modal.scss
+++ b/app/styles/components/classroom_lessons/_timeout_modal.scss
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     z-index: 99;
-    background-color: #969696;
+    background-color: #3f3f3f;
     opacity: 0.9;
   }
   .timeout-modal {
@@ -23,7 +23,7 @@
     text-align: center;
     z-index: 100;
     width: 550px;
-    box-shadow: 5px 5px 5px #888888;
+    box-shadow:  0px 3px 5px 3px #3f3f3f;
     .exit {
       right: 12px;
       top: 12px;
