--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -178,6 +178,9 @@
 .icon-link {
    margin: 8px;
    cursor: pointer;
+   &:first-of-type {
+     margin-left: 0px;
+   }
 }
 
 .icon-puzzle-embossed {
