--- a/client/app/assets/styles/navbar.scss
+++ b/client/app/assets/styles/navbar.scss
@@ -1,6 +1,10 @@
 .q-nav-bar {
   margin: auto;
   max-width: 965px;
+  padding-left: 7px;
+  @media (max-width: 990px) {
+    padding-left: 0px;
+  }
   ul {
     display: flex;
     flex-wrap: wrap;
