update buttons on lessons page

--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -187,8 +187,18 @@
         }
       }
       .report-link {
+        width: 145px;
+        margin-right: 30px;
+        text-decoration: none;
         font-weight: 600;
-        color: #969696;
+        color: #3b3b3b;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        height: 40px;
+        border-radius: 3px;
+        background-color: #ffffff;
+        border: solid 1px #3b3b3b;
       }
       .cell:first-child {
         margin-left: 15px;
