--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -88,8 +88,12 @@
   .edit-students {
     vertical-align: top;
   }
-  .fa {
+  .fa-file-pdf-o {
     padding-right: 10px;
+  }
+
+  .fa-check-circle {
+    padding-right: 5px;
   }
 
   .unit-name {
@@ -179,13 +183,22 @@
       padding: 0;
       margin: 0 !important;
 
-      .supporting-info {
+      .supporting-info, .mark-completed {
         font-weight: 600;
         margin-right: 8px;
         i {
           margin-right: -6px;
         }
       }
+
+      .mark-completed {
+        color: #008473;
+      }
+
+      .supporting-info {
+        color: #585858;
+      }
+
       .report-link {
         width: 145px;
         margin-right: 30px;
