--- a/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
+++ b/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
@@ -1,5 +1,6 @@
 .assign-dates {
   margin-bottom: 200px;
+  padding-top: 10px;
 }
 .fake-border {
   width: 99.4%;
@@ -12,6 +13,37 @@
 }
 #activity-planner,
 #unit-template-editor {
+  .explore-activities-header {
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 24px;
+  }
+  .name-and-assign-activity-pack {
+    margin-top: 35px;
+    h1 {
+      font-size: 30px;
+      font-weight: bold;
+    }
+  }
+  .automatic-assign-note {
+    margin-top: 15px;
+    padding: 15;
+    background-color: #fcf1e1;
+    border: solid 1px rgba(245, 186, 91, 0.41);
+    display: flex;
+    justify-content: space-between;
+    .bold {
+      font-weight: 600;
+    }
+    .italic {
+      font-style: italic;
+    }
+    i {
+      font-size: 20;
+      margin-right: 10px;
+      color: #ea9a1a;
+    }
+  }
   &.menu-aligned-left {
     padding: 0;
     margin: auto;
@@ -20,13 +52,17 @@
       padding: 0;
     }
     .section-header {
-      margin-bottom: 30px;
+      display: inline-block;
+      margin-right: 20px;
+      font-size: 16px;
+      font-weight: 600;
     }
   }
   section {
     border-bottom: none;
     &.name-the-unit {
-      padding-bottom: 10px;
+      border-bottom: solid 1px #c0c0c0;
+      padding-bottom: 30px;
     }
   }
   .error-message-and-button {
