--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -165,7 +165,7 @@
         font-weight: 500;
         position: relative;
         top: -1px;
-        left: 3px;
+        margin-right: 5px;
       }
     }
     .row:last-child {
