--- a/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
+++ b/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
@@ -33,7 +33,7 @@
     display: flex;
     justify-content: space-between;
     .bold {
-      font-weight: 600;
+      font-weight: bold;
     }
     .italic {
       font-style: italic;
