border, dropshawdow change on hover

--- a/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
+++ b/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
@@ -14,6 +14,9 @@
   @media (max-width: 500px) {
     flex-direction: column;
   }
+  a:hover {
+    text-decoration: none;
+  }
   .google-login,
   .clever-login,
   .clever-sign-up,
@@ -25,8 +28,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 1px 1px 0 #c0c0c0;
     margin: 0 auto 15px;
+    border: solid 1px #e9e9e9;
     padding-left: 20px;
     img {
       width: 25px;
@@ -37,6 +40,9 @@
       font-size: 16px;
       font-weight: 600;
       color: #3b3b3b;
+    }
+    &:hover {
+      box-shadow: 0 1px 1px 0 #969696;
     }
   }
   .clever-sign-up,
