--- a/app/views/password_reset/index.html.erb
+++ b/app/views/password_reset/index.html.erb
@@ -21,13 +21,13 @@
   <div class="student-info-box">
     <h4>Are you a student and you didn’t use an email to sign up?</h4>
     <p>Your teacher can reset your password from their dashboard. Here are the steps for your teacher to reset your password:</p>
-    <p class="step">1. Click on <span>“Manage Classes”</span></p>
-    <p class="step">2. Click on <span>“Edit Students”</span> for the class.</p>
-    <p class="step">3. Click on <span>“Edit Account"</span>.</p>
+    <p class="step">1. Click on <span>"Manage Classes"</span></p>
+    <p class="step">2. Click on <span>"Edit Students"</span> for the class</p>
+    <p class="step">3. Click on <span>"Edit Account"</span></p>
     <div class="dividing-line"></div>
     <div class="tip">
       <i class="fa fa-icon fa-lightbulb-o"></i>
-      <p><span>Tip:</span> Your teacher can download and print a pdf that includes all your login information from the <span>Edit Students</span> page.</p>
+      <p><span>Tip:</span> Your teacher can download and print a pdf that includes all your login information from the <span>"Edit Students"</span> page.</p>
     </div>
   </div>
 
