add dropdown to manage units page

--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -27,8 +27,8 @@
     padding-bottom: 30px;
     border-bottom: solid 1px #c0c0c0;
     h1 {
-      font-size: 24px;
-      font-weight: 600;
+      font-size: 30px;
+      font-weight: bold;
     }
     .header-content {
       margin-top: 21px;
