give new empty state message for classroom with no units

--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -19,6 +19,10 @@
       margin-right: 20px;
     }
   }
+  .no-activity-packs {
+    margin-top: 30px;
+    font-size: 16px;
+  }
   .create-unit-button-container {
     height: 130px;
     width: 100%;
