--- a/app/assets/stylesheets/pages/signin.scss
+++ b/app/assets/stylesheets/pages/signin.scss
@@ -13,13 +13,19 @@
     font-size: 16px;
     margin-top: 0;
     margin-bottom: 11px;
+    text-align: left;
   }
   p {
     text-align: left;
+    div {
+      margin-top: 13px;
+      text-align: center;
+    }
   }
   code {
     padding: 8px 24px;
     color: #3b3b3b;
+    background-color: white;
     font-size: 14px;
   }
 }
