Fix a couple images on the home page

--- a/app/views/pages/home_new.html.erb
+++ b/app/views/pages/home_new.html.erb
@@ -217,7 +217,7 @@ Quill Grammar has over 150 sentence writing activities to help your students. Ou
           </a>
         </li>
         <li>
-          <a href="#tab-3">src=<%="#{ENV['CDN_URL']}/images/shared/Colette_Kang_90.png"%>><br>
+          <a href="#tab-3"><img src=<%="#{ENV['CDN_URL']}/images/shared/Colette_Kang_90.png"%>><br>
             <p class="teacher-description">
               6th Grade<br>
               ELA
@@ -233,7 +233,7 @@ Quill Grammar has over 150 sentence writing activities to help your students. Ou
           </a>
         </li>
         <li>
-          <a href="#tab-5">src=<%="#{ENV['CDN_URL']}/images/shared/Michael_Giovacchini_90.png"%>><br>
+          <a href="#tab-5"><img src=<%="#{ENV['CDN_URL']}/images/shared/Michael_Giovacchini_90.png"%>><br>
             <p class="teacher-description">
               11th Grade<br>
               ELL
