Tiny style update to eliminate right border from input with button attached on right side

--- a/app/assets/stylesheets/shared/activity_tables/search_and_select.scss
+++ b/app/assets/stylesheets/shared/activity_tables/search_and_select.scss
@@ -21,11 +21,12 @@
   margin-bottom: 10px;
 
   #search_activities_input {
-    margin-top: 0px;
-    margin-bottom: 20px;
-    width: 280px;
-    border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-right-width: 0;
+    border-top-right-radius: 0;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    width: 280px;
   }
   #search_activities_button {
     margin-right: 15px;
