Minor style updates to activity analysis page

--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -67,6 +67,7 @@
   padding-top: 80px;
   section {
     border-bottom: none;
+    padding: 16px 0;
   }
   .unit-header-row, .unit-label-row {
     display: -webkit-box;
