--- a/app/assets/stylesheets/pages/progress_reports/diagnostic_reports.scss
+++ b/app/assets/stylesheets/pages/progress_reports/diagnostic_reports.scss
@@ -4,7 +4,8 @@
   max-width: 950px;
   padding-top: 44px;
   h1 {
-    font-size: 30px;
+    font-size: 24px;
+    font-weight: 700;
     margin-bottom: 15px;
   }
   .nav-elements {
