fix padding around icons on visual overview

--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -176,11 +176,8 @@
 }
 
 .icon-link {
-   margin: 8px;
-   cursor: pointer;
-   &:first-of-type {
-     margin-left: 0px;
-   }
+  margin: 8px 15px 8px 0px;
+  cursor: pointer;
 }
 
 .icon-puzzle-embossed {
