add captions to states in score legend

--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -17,7 +17,7 @@
 				display: flex;
 				align-items: center;
 				.icons-description-wrapper {
-					p {
+					.title {
 						font-weight: 600;
 					}
 				}
