--- a/app/assets/stylesheets/shared/tooltip/scorebook_and_student_profile_tooltip/main.scss
+++ b/app/assets/stylesheets/shared/tooltip/scorebook_and_student_profile_tooltip/main.scss
@@ -23,6 +23,7 @@
       font-size: 13px;
       padding: 0px;
       margin: 0px;
+      color: #000000;
       .row, .tooltip-message {
         margin: 0px;
 
@@ -34,7 +35,7 @@
 
       .tooltip-message {
         font-size: 13px;
-        color: $darkgray;
+        color: #969696;
       }
 
 
