--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -9,6 +9,7 @@
 @import "components/_language-choices";
 @import "components/_class_lessons";
 @import "components/_question_health";
+@import "components/_customize";
 @import '../../node_modules/react-selectize/themes/index.css';
 @import '../../node_modules/react-select/dist/react-select.css';
 @import '../../node_modules/font-awesome/css/font-awesome.css';
