--- a/app/styles/components/customize/_choose_edition.scss
+++ b/app/styles/components/customize/_choose_edition.scss
@@ -16,5 +16,16 @@
     	font-style: italic;
     }
   }
+  .edition {
+    width: 900px;
+    height: 80px;
+    border-radius: 3px;
+    background-color: #ffffff;
+    box-shadow: 0 0 3px 0 #e9e9e9;
+    border: solid 1px #e9e9e9;
+    align-items: center;
+    display: flex;
+    padding: 10px 20px;
+  }
 
 }
