publishing editions is a go! + pretty navbar

--- a/app/styles/components/_customize.scss
+++ b/app/styles/components/_customize.scss
@@ -1,3 +1,4 @@
 @import 'customize/_choose_edition.scss';
 @import 'customize/_name_modal.scss';
 @import 'customize/_customize_edition.scss';
+@import 'customize/_customize_navbar.scss';
