--- a/app/styles/components/customize/_customize_edition.scss
+++ b/app/styles/components/customize/_customize_edition.scss
@@ -34,6 +34,7 @@
         max-width: 573px;
         width: 100%;
         .field {
+          font-size: 14px;
           margin-bottom: 25px;
           .optional {
             font-style: italic;
@@ -46,9 +47,28 @@
               color: #969696;
             }
           }
+          .input {
+            margin-top: 5px;
+          }
         }
         .title-field {
           margin-bottom: 30px;
+          .options {
+            display: flex;
+            .clear-slide, .reset-slide {
+              font-size: 14px;
+              display: flex;
+              align-items: center;
+              cursor: pointer;
+              i {
+                font-size: 10px;
+                margin-right: 5px;
+              }
+            }
+            .clear-slide {
+              margin-right: 15px;
+            }
+          }
         }
         .prompt-field {
         }
