style and get functionality for text editor

--- a/app/styles/components/_customize.scss
+++ b/app/styles/components/_customize.scss
@@ -2,6 +2,7 @@
 @import 'customize/_name_modal.scss';
 @import 'customize/_customize_edition.scss';
 @import 'customize/_customize_navbar.scss';
+@import 'customize/_text_editor.scss';
 
 .publish-button {
   cursor: pointer;
