--- a/app/styles/components/_customize.scss
+++ b/app/styles/components/_customize.scss
@@ -1,8 +1,10 @@
 @import 'customize/_choose_edition.scss';
 @import 'customize/_name_modal.scss';
+@import 'customize/_name_and_sample_question_modal.scss';
 @import 'customize/_customize_edition.scss';
 @import 'customize/_customize_navbar.scss';
 @import 'customize/_text_editor.scss';
+@import 'customize/_customize_edition_header.scss';
 
 .publish-button {
   cursor: pointer;
