--- a/app/styles/components/customize/_customize_edition.scss
+++ b/app/styles/components/customize/_customize_edition.scss
@@ -131,6 +131,16 @@
       font-size: 16px;
       font-style: italic;
       color: #969696;
+      &.error {
+        display: flex;
+        align-items: center;
+        color: #ff4542;
+        font-style: normal;
+        i {
+          margin-right: 10px;
+          font-size: 12px;
+        }
+      }
     }
     @media (max-width: 850px ) {
       padding: 0px 10px;
