--- a/app/styles/components/customize/_customize_edition_header.scss
+++ b/app/styles/components/customize/_customize_edition_header.scss
@@ -44,6 +44,11 @@
       font-size: 20px;
       font-weight: bold;
       color: #3b3b3b;
+      span {
+        font-weight: 600;
+        font-style: italic;
+        color: #c0c0c0;
+      }
     }
     .name, .sample-question {
       padding: 0px 25px;
