add success modal

--- a/app/styles/components/_customize.scss
+++ b/app/styles/components/_customize.scss
@@ -1,6 +1,7 @@
 @import 'customize/_choose_edition.scss';
 @import 'customize/_name_modal.scss';
 @import 'customize/_name_and_sample_question_modal.scss';
+@import 'customize/_publish_success_modal.scss';
 @import 'customize/_customize_edition.scss';
 @import 'customize/_customize_navbar.scss';
 @import 'customize/_text_editor.scss';
