--- a/app/styles/components/customize/_publish_success_modal.scss
+++ b/app/styles/components/customize/_publish_success_modal.scss
@@ -1,5 +1,5 @@
-.name-and-sample-question-modal-container {
-  .name-and-sample-question-modal-background {
+.publish-success-modal-container {
+  .publish-success-modal-background {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -9,9 +9,9 @@
     background-color: #3f3f3f;
     opacity: 0.9;
   }
-  .name-and-sample-question-modal {
+  .publish-success-modal {
     width: 551px;
-    height: 674px;
+    height: 570px;
     border-radius: 6px;
     background-color: #ffffff;
     position: fixed;
@@ -24,65 +24,50 @@
     text-align: center;
     z-index: 100;
     img {
-      margin: 45px 0px 40px;
+      margin: 45px 0px 20px;
     }
     span {
       font-weight: bold;
     }
     h1 {
       font-size: 20px;
-      font-weight: 600;
+      font-weight: bold;
       color: #3b3b3b;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     .explanation {
-      padding: 0px 30px;
+      width: 365px;
       font-size: 16px;
     	text-align: center;
     	color: #3b3b3b;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
-    .name-section, .sample-question-section {
-      height: 120px;
-      padding: 20px 30px;
+    .activity-name-section, .edition-name-section {
+      padding: 15px 65px;
       width: 100%;
       p {
         font-size: 14px;
         text-align: left;
         color: #969696;
+        margin-bottom: 3px;
       }
-      input {
-        width: 100%;
-        height: 45px;
-        border-radius: 3px;
-        background-color: #ffffff;
-        border: solid 1px #c0c0c0;
-        padding-left: 15px;
-        line-height: 1.31;
+      h2 {
         font-size: 16px;
-        text-align: left;
+        font-weight: 600;
         color: #3b3b3b;
-        &:focus {
-          outline: none;
-        }
-        &::placeholder {
-          font-size: 16px;
-          font-style: italic;
-          line-height: 1.31;
-          text-align: left;
-          color: #c0c0c0;
-        }
+        text-align: left;
       }
     }
     .fields {
-      margin-bottom: 30px;
+      margin-bottom: 10px;
+      width: 549px;
       background-color: #fafafa;
     }
     .dividing-line {
       width: 470px;
       border-bottom: solid 1px #e9e9e9;
     }
-    button {
+    .button-link {
       width: 145px;
       height: 40px;
       border-radius: 3px;
@@ -92,15 +77,13 @@
       border: none;
       cursor: pointer;
       background-color: #00c2a2;
-      &.inactive {
-        background-color: #e9e9e9;
-      }
+      padding: 10px;
+      font-size: 15px;
     }
 
     a {
-      margin-top: 15px;
-      margin-bottom: 40px;
-      font-size: 16px;
+      margin-top: 20px;
+      font-size: 14px;
       font-weight: 600;
       color: #027360;
     }
