--- a/app/styles/components/customize/_choose_edition.scss
+++ b/app/styles/components/customize/_choose_edition.scss
@@ -1,25 +1,35 @@
 .choose-edition {
   width: 900px;
-  text-align: center;
   margin: 90px auto;
   h1 {
     font-size: 30px;
     font-weight: bold;
     color: #000000;
     margin-bottom: 12px;
+    text-align: center;
+  }
+  .explanation, .header {
+    color: #969696;
+    margin-bottom: 5px;
   }
   .explanation {
     font-size: 14px;
     margin-bottom: 40px;
-    text-align: center;
+    text-align: left;
     span {
       font-weight: 600;
     }
   }
-  p {
-    font-size: 16px;
+  .sample-question {
+    font-size: 14px;
     text-align: left;
     color: #969696;
+    .span {
+      font-weight: 600;
+    }
+  }
+  .name {
+    text-align: left;
     margin-bottom: 5px;
   }
   .quill-editions {
@@ -57,10 +67,14 @@
         color: #969696;
         display: flex;
         align-items: center;
-        justify-content: center;;
+        justify-content: center;
+        cursor: pointer;
         .fa-magic {
           margin-right: 4px;
           font-size: 13px;
+        }
+        .fa-caret-down {
+          margin-left: 30px;
         }
       }
       .dropdown {
@@ -72,6 +86,7 @@
         border: solid 0.5px #e9e9e9;
         top: 45;
         z-index: 99;
+        cursor: pointer;
         .option {
           align-items: center;
           display: flex;
@@ -81,6 +96,12 @@
           text-align: left;
           color: #969696;
           height: 28px;
+          img {
+            margin-right: 10px;
+          }
+          &:hover {
+            background-color: #f9f9f9;
+          }
         }
       }
     }
