--- a/app/styles/components/classroom_lessons/_teacher_navbar.scss
+++ b/app/styles/components/classroom_lessons/_teacher_navbar.scss
@@ -12,6 +12,19 @@
       font-weight: bold;
     }
   }
+  .custom-editions-tag {
+    width: 133px;
+    height: 23px;
+    border-radius: 11.5px;
+    background-color: #348fdf;
+    margin-left: 10px;
+    display: flex;
+    font-size: 12px;
+    font-weight: 600;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+  }
   .present-student-count {
     font-size: 16px;
     margin-right: 30px;
@@ -38,7 +51,7 @@
       outline: none;
       cursor: pointer;
     }
-    img {
+    img, .fa-magic {
       margin: 3px;
       padding: 5px;
       height: 33px;
@@ -53,7 +66,7 @@
   }
 }
 
-.help-dropdown, .flag-dropdown {
+.help-dropdown, .flag-dropdown, .customize-dropdown {
   position: absolute;
   background-color: white;
   width: 149px;
@@ -99,6 +112,17 @@
   }
   p:hover {
     background-color: #f5f5f5;
+  }
+}
+
+.customize-dropdown {
+  left: 64px;
+  a {
+    display: block;
+    color: 	color: #027360;
+    &:hover {
+      background-color: #f5f5f5;
+    }
   }
 }
 
