--- a/app/styles/components/classroom_lessons/_teacher_navbar.scss
+++ b/app/styles/components/classroom_lessons/_teacher_navbar.scss
@@ -8,6 +8,8 @@
   align-items: center;
   .lesson-title {
     font-size: 20px;
+    display: flex;
+    align-items: center;
     span {
       font-weight: bold;
     }
@@ -57,6 +59,9 @@
       height: 33px;
       width: 33px;
       &.hover {
+        background-color: #027360;
+      }
+      &:hover {
         background-color: #027360;
       }
     }
@@ -119,9 +124,13 @@
   left: 64px;
   a {
     display: block;
-    color: 	color: #027360;
+    color: #027360;
+    padding-left: 5px;
     &:hover {
       background-color: #f5f5f5;
+    }
+    &:first-of-type {
+      margin-bottom: 3px;
     }
   }
 }
